# backend/docs/swagger.json
@@ -3291,6 +3291,9 @@
         "entity.CreditStatement": {
             "type": "object",
             "properties": {
+                "amount_due": {
+                    "type": "integer"
+                },
                 "available_credit": {
                     "type": "integer"
                 },
@@ -3305,6 +3308,21 @@
                     "items": {
                         "$ref": "#/definitions/entity.Transaction"
                     }
+                },
+                "last_statement_balance": {
+                    "type": "integer"
+                },
+                "payment_due_at": {
+                    "type": "string"
+                },
+                "payment_due_day": {
+                    "type": "integer"
+                },
+                "payment_status": {
+                    "type": "string"
+                },
+                "statement_day": {
+                    "type": "integer"
                 },
                 "wallet_id": {
                     "type": "string"
@@ -4251,10 +4269,19 @@
                 "is_in_total": {
                     "type": "boolean"
                 },
+                "last_statement_balance": {
+                    "type": "integer"
+                },
                 "name": {
                     "type": "string"
                 },
                 "opening_balance": {
+                    "type": "integer"
+                },
+                "payment_due_day": {
+                    "type": "integer"
+                },
+                "statement_day": {
                     "type": "integer"
                 },
                 "target_amount": {
